# From-Data-to-Story

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_perception_control.ipynb  02_narrative_visualization.ipynb  03_context_and_comparison.ipynb  04_uncertainty_visualization.ipynb  05_cognitive_load_reduction.ipynb  06_process_and_journey.ipynb  07_framing_and_bias.ipynb  08_visualization_storytelling.ipynb
src/vizint/: __init__.py
src/vizint/annotation/: __init__.py  arrows.py  direct_label.py  inline_label.py  notes.py
src/vizint/comparison/: __init__.py  compare_lines.py  distribution.py  relative.py  small_multiples.py
src/vizint/context/: __init__.py  benchmark.py  excess.py  reference.py  target.py
src/vizint/core/: __init__.py  axes_utils.py  base_chart.py  chart_builder.py  figure_layout.py
src/vizint/narrative/: __init__.py  regime.py  story.py  timeline.py  turning_point.py
src/vizint/perception/: __init__.py  fade.py  focus.py  highlight.py  outlier.py  saliency.py
src/vizint/pipeline/: __init__.py  builder.py  insight_chart.py  narrative_pipeline.py  story_chart.py
src/vizint/process/: __init__.py  contribution.py  decomposition.py  waterfall.py
src/vizint/styling/: __init__.py  hierarchy.py  palette.py  theme.py  typography.py
src/vizint/uncertainty/: __init__.py  confidence_band.py  fan_chart.py  forecast.py  prediction_interval.py
