[project]
name = "vizint"
version = "0.1.0"
description = "Visualization Intelligence Framework"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Macht" }
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "seaborn>=0.13",
    "statsmodels>=0.14"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]